// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flood fill Sample input 1`] = `
Array [
  305,
  233,
]
`;

exports[`Flood fill Sample input 2`] = `
"▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ╔═╗ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧
▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ║ ║ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧
▤ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ║ ║ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇
▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ║ ▼ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧
◇ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ╔═╝ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇
▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ╚═╗ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧
▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ║ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧
▤ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ║ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧
▤ ◇ ▤ ▤ ▤ ▤ ◇ 1 ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ║ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧
◇ ▤ ◇ ▤ ▤ ▤ ▤ ╚═════════════════════╗ ║ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇
▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ┏━━━━━━━━━━━━━━━━━┓ ╚═╝ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧
▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ┃ ┏━━━━━━━━━━━━━━━┛ ◇ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧
▤ ▤ ▤ ▤ ▤ ◇ ▤ ▤ 0 ┃ ▤ ▤ ▤ ◇ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧
▤ ◄━━━━━━━━━━━━━━━┛ ▤ ▤ ▤ ▤ ◇ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧
▤ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ◇ ▧ ▧ ▧ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇
▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▧ ◇ ▧ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧
▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▧ ▧ ◇ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧
◇ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▧ ▧ ▧ ◇ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧
▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧
▤ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ◇ ▧ ▧ ▧ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇
"
`;

exports[`Flood fill Sample input 2 1`] = `
Array [
  296,
  240,
]
`;

exports[`Flood fill Sample input 2 2`] = `
"▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ╔═╗ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧
▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ║ ║ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧
▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ║ ║ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧
◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ║ ║ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇
▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ╔═╝ ▼ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧
▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ╚═╗ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇
▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ║ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧
▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ║ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧
◇ ▤ ▤ ▤ ▤ ◇ ▤ 1 ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ║ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧
▤ ◇ ▤ ▤ ▤ ▤ ◇ ╚═════════════════════╗ ║ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧
▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ┏━━━━━━━━━━━━━━━━━┓ ╚═╝ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇
▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ┃ ┏━━━━━━━━━━━━━━━┛ ▧ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧
▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ 0 ┃ ▤ ▤ ◇ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧
◄━━━━━━━━━━━━━━━━━┛ ▤ ▤ ▤ ◇ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧
▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧
▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▧ ◇ ▧ ▧ ▧ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇
▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧
▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧
◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ▧ ▧ ▧ ▧ ◇ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧
▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧
"
`;

exports[`Flood fill Sample input 3 1`] = `
Array [
  198,
  336,
]
`;

exports[`Flood fill Sample input 3 2`] = `
"▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ╔═╗ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧
▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ║ ║ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧
◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ║ ║ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇
▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ║ ║ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧
▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ╔═╝ ╚═► ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧
▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ╚═╗ ▧ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧
▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ║ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇
◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ║ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧
▤ ◇ ▤ ▤ ▤ ▤ ◇ 1 ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ║ ◇ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧
▤ ▤ ◇ ▤ ▤ ▤ ▤ ╚═════════════════════╗ ║ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧
▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ┏━━━━━━━━━━━━━━━━━┓ ╚═╝ ▧ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧
▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ┃ ┏━━━━━━━━━━━━━━━┛ ◇ ▧ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇
▲ ▤ ▤ ▤ ▤ ◇ ▤ ▤ 0 ┃ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧
┗━━━━━━━━━━━━━━━━━┛ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧
▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧
▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧
▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇
▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧
◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧
▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧
"
`;

exports[`Game Sample input 1`] = `
"┏━━━━━━━┓ ◄═══════════════════════════════════════════════╗
┃ ⋅ ⋅ ⋅ ┗━━━━━━━━━━━0 ⋅ ┏━━━━━━━━━━━► ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ║
┗━━━━━━━━━━━━━━━━━━━━━━━┛ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ║
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ║
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ║
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ║
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ║
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ║
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ║
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ 1
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
"
`;

exports[`Game Start position when my index is 0 1`] = `
"⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ 1 ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ 0
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
"
`;

exports[`Game Start position when my index is 1 1`] = `
"⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ 0 ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ▲
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ 1
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
"
`;

exports[`Game Start position when my index is 2 1`] = `
"⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ 2─► ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ▲
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ 1
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ 0 ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
"
`;

exports[`Score outcomes 2 players 1`] = `
Object {
  "DOWN": Object {
    "count": 3,
    "sum": 0.0036305374816851706,
  },
  "LEFT": Object {
    "count": 5,
    "sum": 0.01360078177106669,
  },
  "RIGHT": Object {
    "count": 3,
    "sum": -0.003732736095558034,
  },
  "UP": Object {
    "count": 7,
    "sum": 0.056539834995628084,
  },
}
`;

exports[`Score outcomes All alive, zero depth 1`] = `
Object {
  "DOWN": Object {
    "count": 3,
    "sum": 0,
  },
  "LEFT": Object {
    "count": 5,
    "sum": 0,
  },
  "RIGHT": Object {
    "count": 3,
    "sum": 0,
  },
  "UP": Object {
    "count": 7,
    "sum": 0,
  },
}
`;

exports[`Score outcomes Some dirs 1`] = `
Object {
  "DOWN": Object {
    "count": 1,
    "sum": 0.018181818181818177,
  },
  "LEFT": Object {
    "count": 0,
    "sum": 0,
  },
  "RIGHT": Object {
    "count": 0,
    "sum": 0,
  },
  "UP": Object {
    "count": 1,
    "sum": -0.09090909090909091,
  },
}
`;
